# mcp-tmdb

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  FLOWS.md  README.md  TMDB_API.md  VISION.md  pyproject.toml  server.py
.claude/skills/commit/: SKILL.md
data/: keywords.json
search/: classifier.py  graph.py  memory.py  nodes.py  prompts.py  smart.py  state.py  tools.py
tests/: test_integration.py  test_intent.py  test_postprocess.py  test_prompt.py  test_route.py
