[project]
name = "mcp-tmdb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "python-dotenv",
    "dspy>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tekee oikeita API-kutsuja — aja erikseen: pytest -m integration",
]
